--- a/slang_jvm/build.xml
+++ b/slang_jvm/build.xml
@@ -1,4 +1,4 @@
-<project name="slangBCEL" basedir="." default="main">
+<project name="slang4JVM" basedir="." default="main">
 	<property name="src.dir" value="src" />
 	<property name="build.dir" value="bin" />
 	<property name="dist.dir" value="dist" />
